feat: add create in AccountContext

--- a/CourseManagerApi.Api/appsettings.json
+++ b/CourseManagerApi.Api/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:127.0.0.1,1433;Database=coursemanager;UID=sa;PWD=@sqlserver123;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  },
+  "Secrets": {
+    "PasswordSaltKey": "Cm20]N5?4pb9%R+k8[L"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
