feat: add client, address, phone number and occupation

--- a/CourseManagerApi.Api/appsettings.json
+++ b/CourseManagerApi.Api/appsettings.json
@@ -3,6 +3,7 @@
     "DefaultConnection": "Server=tcp:127.0.0.1,1433;Database=coursemanager;UID=sa;PWD=@sqlserver123;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "Secrets": {
+    "StringSaltKey": "Cm20]N5?4pb9%R+k8[L",
     "JwtPrivateKey": "CK54q}V6r]3$7oaa/*bCK54q}V6r]3$7oaa/*b",
     "PasswordSaltKey": "Cm20]N5?4pb9%R+k8[L"
   },
