--- a/CourseManagerApi.Core/CourseManagerApi.Core.csproj
+++ b/CourseManagerApi.Core/CourseManagerApi.Core.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
   </ItemGroup>
 
   <PropertyGroup>
